fix scrollbar disappearing causing annoying displacements

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  
-
- 
-}
+ }
+ body{
+  overflow-y: scroll;
+ }
 .topic {
+  
   text-align: left;
   margin-left: 2px;
   font-size: x-small;
@@ -31,6 +32,7 @@
 .article {
   font-size: medium;
   text-align: justify;
+  
 }
 
 .thumbs{
